--- a/sass/blocks/_header-intro.scss
+++ b/sass/blocks/_header-intro.scss
@@ -35,6 +35,10 @@
     }
 }
 
+.header-intro__desc-mobile {
+    display: none;
+}
+
 .header-intro__buttons {
     display: flex;
     column-gap: 20px;
