--- a/sass/media/_mobile.scss
+++ b/sass/media/_mobile.scss
@@ -1,3 +1,43 @@
 @media (max-width: 767px) {
-    
+    .header-intro__title {
+        margin-bottom: 20px;
+    }
+
+    .title {
+        font-size: 32px;
+    }
+
+    .title.grad-border {
+        background-position: center bottom 3px;
+        background-size: 100% 8px;
+    }
+
+
+    .header-intro__content {
+        flex-direction: column;
+    }
+
+    .header-intro__img {
+        margin-bottom: 10px;
+    }
+
+    .header-intro__desc {
+        display: none;
+    }
+
+    .header-intro__desc-mobile {
+        display: block;
+
+        p {
+            line-height: 1.6;
+        }
+    }
+
+    .header-banner {
+        margin-top: 0;
+
+        img {
+            height: 168px;
+        }
+    }
 }
