--- a/css/main.css
+++ b/css/main.css
@@ -821,6 +821,34 @@ h2.grad-border {
   .header-banner img {
     height: 475px;
   }
+  .header-about {
+    margin-top: -111px;
+    padding-top: 80px;
+    z-index: 1;
+    position: relative;
+  }
+  .header-about__content {
+    -moz-column-gap: 30px;
+         column-gap: 30px;
+  }
+  .header-about__column:first-child {
+    width: 495px;
+  }
+  .header-about__column:last-child {
+    margin-left: 0;
+  }
+  .header-about__subtitle {
+    margin-bottom: 20px;
+  }
+  .section-title-42px {
+    font-size: 32px;
+  }
+  .header-about__skills li {
+    font-size: 18px;
+  }
+  .header-about__socials {
+    margin-bottom: 20px;
+  }
 }
 /* Mobile */
 @media (max-width: 899px) {
@@ -852,7 +880,6 @@ h2.grad-border {
   .nav-mobile.nav-mobile--active {
     z-index: 2;
     position: fixed;
-    display: none;
     display: flex;
     justify-content: flex-end;
     top: 0;
@@ -907,6 +934,26 @@ h2.grad-border {
   }
   .header-banner img {
     height: 430px;
+  }
+  .header-about__column:first-child {
+    width: 354px;
+  }
+  .section-title-42px {
+    font-size: 24px;
+  }
+  .header-about__skills li {
+    font-size: 16px;
+  }
+  .header-about__skills li::before {
+    content: "";
+    padding-right: 0;
+  }
+  .header-about__socials {
+    margin-bottom: 20px;
+  }
+  .socials {
+    -moz-column-gap: 20px;
+         column-gap: 20px;
   }
   /* Нечетные */
   .timeline-item:nth-child(odd) {
