--- a/css/main.css
+++ b/css/main.css
@@ -1014,6 +1014,57 @@ h2.grad-border {
     -moz-column-gap: 20px;
          column-gap: 20px;
   }
+  .portfolio {
+    padding-top: 30px;
+    padding-bottom: 40px;
+  }
+  .portfolio__title {
+    margin-bottom: 30px;
+  }
+  .section-title {
+    font-size: 32px;
+  }
+  .portfolio__cards {
+    row-gap: 20px;
+  }
+  .portfolio-card {
+    max-width: 226px;
+    height: 213px;
+  }
+  .portfolio-card__img img {
+    width: 226px;
+    height: 140px;
+  }
+  .portfolio-card__text {
+    height: 63px;
+  }
+  .portfolio-card:first-child,
+  .portfolio-card:nth-child(2) {
+    max-width: 354px;
+    height: 235px;
+  }
+  .portfolio-card:first-child .portfolio-card__img,
+  .portfolio-card:nth-child(2) .portfolio-card__img {
+    margin-bottom: 10px;
+  }
+  .portfolio-card:first-child img,
+  .portfolio-card:nth-child(2) img {
+    width: 354px;
+    height: 180px;
+  }
+  .portfolio-card:first-child .portfolio-card__text,
+  .portfolio-card:nth-child(2) .portfolio-card__text {
+    height: 58px;
+  }
+  .portfolio-card:first-child .portfolio-card__title,
+  .portfolio-card:nth-child(2) .portfolio-card__title {
+    margin-bottom: 4px;
+    font-size: 18px;
+  }
+  .portfolio-card:first-child .portfolio-card__desc,
+  .portfolio-card:nth-child(2) .portfolio-card__desc {
+    font-size: 14px;
+  }
   /* Нечетные */
   .timeline-item:nth-child(odd) {
     padding-right: 0;
