--- a/sass/media/_mobile.scss
+++ b/sass/media/_mobile.scss
@@ -101,4 +101,33 @@
             font-size: 14px;
         }
     }
+
+    /****** Timeline ******/
+    .timeline-wrapper {
+        width: 246px;
+    }
+    
+    .timeline-item__title {
+        font-size: 20px;
+    }
+
+    .timeline-item { 
+        &:first-child::before, &:first-child::after {
+            top: 0;
+        }
+
+        p {
+            font-size: 14px;
+            margin-top: 7px;
+        } 
+    
+        p + * {
+            margin-top: 10px;
+        }
+
+        p + p {
+            margin-top: 7px;
+        }
+    
+    }
 }
