--- a/css/main.css
+++ b/css/main.css
@@ -1110,9 +1110,6 @@ h2.grad-border {
   .timeline-item:not(:last-child) {
     padding-bottom: 45px;
   }
-  .timeline-item__title {
-    font-size: 20px;
-  }
   /* Нечетные */
   .timeline-item:nth-child(odd) {
     padding-right: 0;
@@ -1131,6 +1128,7 @@ h2.grad-border {
   /* Четные */
   .timeline-item:nth-child(even) {
     margin-left: 0;
+    padding-left: 44px;
   }
   .timeline-item:nth-child(even)::before {
     left: 17px;
@@ -1228,7 +1226,9 @@ h2.grad-border {
   }
   /****** Timeline ******/
   .timeline-wrapper {
-    width: 246px;
+    width: 100%;
+    margin-left: unset;
+    margin-right: unset;
   }
   .timeline-item__title {
     font-size: 20px;
@@ -1245,5 +1245,8 @@ h2.grad-border {
   }
   .timeline-item p + p {
     margin-top: 7px;
+  }
+  .timeline-item span {
+    font-size: 14px;
   }
 }/*# sourceMappingURL=main.css.map */
