--- a/sass/media/_tablet.scss
+++ b/sass/media/_tablet.scss
@@ -243,4 +243,49 @@
     .timeline-item:nth-child(even)::after  {
         transform: none;
     }
+
+     /***** Contacts *****/
+     .contacts {
+        padding-bottom: 40px;
+    }
+    
+    .contacts__header {
+        margin-bottom: 20px;
+    }
+
+    h2.grad-border {
+        // background-position: center bottom 3px;
+    }
+    
+    .contacts__list {
+    
+        li + li {
+            margin-top: 10px;
+        }
+    
+        span {
+            display: block;
+            width: unset;
+            font-size: 16px;
+        }
+    
+        a {
+            margin-left: 0;
+            font-size: 16px;
+        }
+    }
+    
+    .contacts__text {
+        width: 290px;
+    
+        font-size: 14px;
+
+        p + p {
+            margin-top: 5px;
+        }
+    }
+    
+    .contacts__text::before {
+        content: "";
+    }
 }
