--- a/css/main.css
+++ b/css/main.css
@@ -320,7 +320,7 @@ h2.grad-border {
 
 .header-intro__content {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
 }
 
@@ -760,8 +760,31 @@ h2.grad-border {
     width: 36px;
     height: 36px;
   }
+  .svg-ln {
+    width: 28px;
+    height: 28px;
+  }
+  .header-about .socials {
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+  }
+  .header-about .socials svg, .header-about .socials object {
+    width: 48px;
+    height: 48px;
+  }
+  .link {
+    font-size: 18px;
+  }
+  h2.grad-border {
+    background-position: center bottom 6px;
+  }
   .header-top {
     padding-bottom: 60px;
+  }
+  .header-top__social {
+    align-items: flex-start;
+    -moz-column-gap: 29px;
+         column-gap: 29px;
   }
   .nav ul {
     -moz-column-gap: 50px;
@@ -775,7 +798,7 @@ h2.grad-border {
     padding-bottom: 0;
   }
   .header-intro__title {
-    margin-bottom: 20px;
+    margin-bottom: 21px;
   }
   .title {
     font-size: 58px;
@@ -801,10 +824,8 @@ h2.grad-border {
     padding-left: 26px;
     padding-right: 26px;
     height: 58px;
-    border-radius: 50px;
     line-height: 58px;
     font-size: 20px;
-    font-weight: 700;
   }
   .header-intro__img {
     box-shadow: unset;
@@ -820,8 +841,9 @@ h2.grad-border {
     height: 475px;
   }
   .header-about {
-    margin-top: -111px;
+    margin-top: -92px;
     padding-top: 80px;
+    padding-bottom: 60px;
     z-index: 1;
     position: relative;
   }
@@ -845,7 +867,7 @@ h2.grad-border {
     font-size: 18px;
   }
   .header-about__socials {
-    margin-bottom: 20px;
+    margin-bottom: 16px;
   }
   /**** Portfolio ****/
   .portfolio {
@@ -923,29 +945,13 @@ h2.grad-border {
   .timeline-item__title {
     font-size: 20px;
   }
-  .timeline-item:first-child::before, .timeline-item:first-child::after {
-    top: 1;
-  }
-  .timeline-item p {
-    font-size: 14px;
-    margin-top: 7px;
-  }
-  .timeline-item p + * {
-    margin-top: 10px;
-  }
-  .timeline-item p + p {
-    margin-top: 7px;
-  }
   /***** Contacts *****/
   .contacts {
     padding-top: 40px;
-    padding-bottom: 70px;
+    padding-bottom: 66px;
   }
   .contacts__header {
     margin-bottom: 40px;
-  }
-  h2.grad-border {
-    background-position: center bottom 3px;
   }
   .contacts__list {
     margin-bottom: 25px;
@@ -987,6 +993,25 @@ h2.grad-border {
 }
 /* Mobile */
 @media (max-width: 899px) {
+  h2.grad-border {
+    background-position: center bottom 3px;
+  }
+  .socials {
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+  }
+  .socials svg, .socials object {
+    width: 38px;
+    height: 38px;
+  }
+  .header-about .socials {
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+  }
+  .header-about .socials svg, .header-about .socials object {
+    width: 38px;
+    height: 38px;
+  }
   .header-top {
     padding-top: 30px;
     padding-bottom: 30px;
@@ -1041,11 +1066,16 @@ h2.grad-border {
   .header-intro__title {
     margin-bottom: 10px;
   }
+  .header-intro__text {
+    padding-top: 3px;
+  }
   .title {
     font-size: 42px;
   }
+  .header-intro__content {
+    align-items: center;
+  }
   .header-intro__text {
-    padding-top: 0;
     max-width: 354px;
   }
   .header-intro__desc {
@@ -1065,10 +1095,19 @@ h2.grad-border {
     height: 250px;
   }
   .header-banner {
-    margin-top: -110px;
+    margin-top: -90px;
   }
   .header-banner img {
-    height: 430px;
+    height: 403px;
+  }
+  .header-about {
+    padding-bottom: 40px;
+  }
+  .header-about__subtitle {
+    margin-bottom: 23px;
+  }
+  .header-about__socials {
+    margin-bottom: 15px;
   }
   .header-about__column:first-child {
     width: 354px;
@@ -1082,13 +1121,6 @@ h2.grad-border {
   .header-about__skills li::before {
     content: "";
     padding-right: 0;
-  }
-  .header-about__socials {
-    margin-bottom: 20px;
-  }
-  .socials {
-    -moz-column-gap: 20px;
-         column-gap: 20px;
   }
   .portfolio {
     padding-top: 30px;
@@ -1104,7 +1136,7 @@ h2.grad-border {
     row-gap: 20px;
   }
   .portfolio-card {
-    max-width: 226px;
+    width: 226px;
     height: 213px;
   }
   .portfolio-card__img img {
@@ -1113,6 +1145,9 @@ h2.grad-border {
   }
   .portfolio-card__text {
     height: 63px;
+  }
+  .portfolio-card__text h3, .portfolio-card__text p {
+    -webkit-line-clamp: 2;
   }
   .portfolio-card:first-child,
   .portfolio-card:nth-child(2) {
@@ -1158,6 +1193,12 @@ h2.grad-border {
   .timeline-item:not(:last-child) {
     padding-bottom: 45px;
   }
+  .timeline-item strong {
+    font-size: 14px;
+  }
+  .timeline-item__title.grad-border {
+    background-position: center bottom 2px;
+  }
   /* Нечетные */
   .timeline-item:nth-child(odd) {
     padding-right: 0;
@@ -1187,10 +1228,19 @@ h2.grad-border {
   }
   /***** Contacts *****/
   .contacts {
-    padding-bottom: 40px;
+    padding-bottom: 35px;
   }
   .contacts__header {
     margin-bottom: 20px;
+  }
+  h2.grad-border {
+    background-position: center bottom 4px;
+  }
+  .contacts__row {
+    justify-content: flex-start;
+  }
+  .contacts__list {
+    margin-bottom: 28px;
   }
   .contacts__list li + li {
     margin-top: 10px;
@@ -1205,6 +1255,7 @@ h2.grad-border {
     font-size: 16px;
   }
   .contacts__text {
+    margin-left: 114px;
     width: 290px;
     font-size: 14px;
   }
@@ -1212,26 +1263,29 @@ h2.grad-border {
     margin-top: 5px;
   }
   .contacts__text::before {
-    content: "";
+    display: none;
   }
   /***** Footer *****/
   .footer__copyright {
     width: 738px;
   }
   .footer__text {
-    line-height: 2;
+    line-height: 1.5;
+  }
+  .footer__text p + p {
+    margin-top: 15px;
   }
 }
 @media (max-width: 767px) {
-  .header-intro__title {
-    margin-bottom: 20px;
-  }
   .title {
     font-size: 32px;
   }
   .title.grad-border {
     background-position: center bottom 3px;
     background-size: 100% 8px;
+  }
+  .header-intro__title {
+    margin-bottom: 18px;
   }
   .header-intro__content {
     flex-direction: column;
@@ -1255,7 +1309,11 @@ h2.grad-border {
     height: 168px;
   }
   .header-about {
+    margin-top: -70px;
     padding-bottom: 40px;
+  }
+  .header-about__subtitle {
+    margin-bottom: 21px;
   }
   .header-about__content {
     -moz-column-gap: 0;
@@ -1264,6 +1322,12 @@ h2.grad-border {
   }
   .header-about__column {
     margin-bottom: 30px;
+  }
+  .header-about__column:first-child {
+    width: unset;
+  }
+  .header-about__column:last-child {
+    margin-bottom: 0;
   }
   .portfolio__cards {
     row-gap: 30px;
@@ -1287,7 +1351,7 @@ h2.grad-border {
   }
   .portfolio-card:first-child,
   .portfolio-card:nth-child(2) {
-    max-width: 290px;
+    width: 290px;
     height: 235px;
   }
   .portfolio-card:first-child img,
@@ -1330,7 +1394,7 @@ h2.grad-border {
   .timeline-item p + p {
     margin-top: 7px;
   }
-  .timeline-item span {
+  .timeline-item strong {
     font-size: 14px;
   }
   /***** Contacts *****/
@@ -1356,14 +1420,12 @@ h2.grad-border {
     width: 38px;
   }
   .contacts__text {
+    margin-left: 0;
     width: 290px;
     font-size: 14px;
   }
   .contacts__text p + p {
     margin-top: 5px;
-  }
-  .contacts__text::before {
-    content: "";
   }
   /***** Footer *****/
   .footer__copyright {
