--- a/sass/media/_tablet.scss
+++ b/sass/media/_tablet.scss
@@ -53,7 +53,7 @@
         }
     }
 
-    .nav-mobile.nav-mobile--active {
+    .nav-mobile {
         z-index: 2;
         position: fixed;
         display: flex;
@@ -62,8 +62,16 @@
         bottom: 0;
         right: 0;
         width: 100%;
-    
+
         background-color: rgba(37, 73, 116, 0.8);
+
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in;
+    
+
+        &.nav-mobile--active {
+            transform: translateX(0);
+        }
     }
 
     .nav-mobile__content {
