--- a/sass/media/_tablet.scss
+++ b/sass/media/_tablet.scss
@@ -207,7 +207,7 @@
 
     .portfolio-card:first-child,
     .portfolio-card:nth-child(2) {
-        max-width: 354px;
+        width: 354px;
         height: 235px;
     
         .portfolio-card__img {
